# ml-from-scratch

./: Pipfile  README.md  pyproject.toml  requirements.txt
notebooks/: automatic_differentiation.ipynb  codenames.ipynb  numpy_pca.ipynb  principal_components.ipynb
scripts/: live_audio_fft.py
