[tool.poetry]
name = "ml-from-scratch"
version = "0.1.0"
description = ""
authors = ["Andrew Yatsura <andrewyazura203@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{ include = "ml_from_scratch" }]

[tool.poetry.dependencies]
python = "^3.11"
numpy = "^1.25.2"
matplotlib = "^3.7.2"
pandas = "^2.0.3"
jupyter = "^1.0.0"
scikit-learn = "^1.3.0"
sounddevice = "^0.4.6"


[tool.poetry.group.dev.dependencies]
black = "^23.7.0"
ruff = "^0.0.285"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
